@@ -28,8 +28,8 @@ public class ConnectionFailureException extends HCatException {
     private static final long serialVersionUID = 1L;
 
     /**
-     * @param message
-     * @param cause
+     * @param message Exception message.
+     * @param cause The wrapped Throwable that caused this exception.
      */
     public ConnectionFailureException(String message, Throwable cause) {
         super(message, cause);
